fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 @media (max-width: 767px) {
 
   .sidebar {
-    flex: 1;
+    flex: 1.3;
     overflow: hidden;
   }
 
