--- a/src/styles/pages/TabsPage.css
+++ b/src/styles/pages/TabsPage.css
@@ -3,4 +3,13 @@
     padding-top: 2vw;
     height: 100vh;
     overflow-y: auto;
+    overflow-x: hidden;
+}
+
+@media (max-width: 767px) {
+    
+    .tabs-page {
+        padding-top: 6vw;
+    }
+
 }
